# powerplant-coding-challenge

./: Dockerfile  README.md  pyproject.toml  requirements.txt
example_payloads/: response1.json  response2.json
powerplantapp/api/: post.py
powerplantapp/api/services/: strategy.py
powerplantapp/domain/: model.py
src/domain/: model.py
tests/: api_tests.py  conftest.py  strategy_tests.py
