[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Patrik Bernhardsson attempts the ENGIE coding challenge"
authors = ["Patrik Bernhardsson <pbernhardsson@littlebigcode.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
