[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Patrik Bernhardsson attempts the ENGIE coding challenge"
authors = ["Patrik Bernhardsson <pbernhardsson@littlebigcode.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "*_tests.py"